--- a/frontend/src/components/profile/profile.scss
+++ b/frontend/src/components/profile/profile.scss
@@ -93,8 +93,8 @@
 
 .my-cars.active {
     background-color: #FFFFFF;
-    color: #d32323;
-    border: 1px solid #d32323;
+    color: teal;
+    border: 1px solid teal;
     position: relative;
     width: 100%;
     height: 45px;
@@ -105,20 +105,19 @@
     margin-bottom: 5px;
     margin-top:10px;
     border-radius: 5px;
-    font-family: 'Indie Flower', cursive;
     font-weight:700;
 }
 
 .my-cars.active:hover {
-    background-color: #d32323;
+    background-color: teal;
     color: #FFFFFF;
-    border: 1px solid #d32323;
+    border: 1px solid teal;
 }
 
 .my-followed.active {
     background-color: #FFFFFF;
-    color: #d32323;
-    border: 1px solid #d32323;
+    color: teal;
+    border: 1px solid teal;
     position: relative;
     width: 100%;
     height: 45px;
@@ -129,21 +128,20 @@
     margin-bottom: 5px;
     margin-top:10px;
     border-radius: 5px;
-    font-family: 'Indie Flower', cursive;
     font-weight:700;
 }
 
 .my-followed.active:hover {
-    background-color: #d32323;
+    background-color: teal;
     color: #FFFFFF;
-    border: 1px solid #d32323;
+    border: 1px solid teal;
 }
 
 
 .car-idx, .new-car, .car-details, .my-cars, .my-followed {
-    background-color: #d32323;
+    background-color: teal;
     color: #FFFFFF;
-    border: 1px solid #d32323;
+    border: 1px solid teal;
     position: relative;
     width: 100%;
     height: 45px;
@@ -154,7 +152,6 @@
     margin-bottom: 5px;
     margin-top:10px;
     border-radius: 5px;
-    font-family: 'Indie Flower', cursive;
     font-weight:700;
 }
 
@@ -168,13 +165,13 @@
 }
 
 /* .profile-btn-container a:hover {
-    color: #d32323;
+    color: teal;
     text-decoration: none;
 } */
 
 .car-idx:hover, .new-car:hover, .car-details:hover, .my-cars:hover, .my-followed:hover {
     background-color: #FFFFFF;
-    color: #d32323;
-    border: 1px solid #d32323;
+    color: teal;
+    border: 1px solid teal;
 }
 
