--- a/frontend/src/components/car/car-show.scss
+++ b/frontend/src/components/car/car-show.scss
@@ -56,9 +56,9 @@
     cursor:pointer;
 }
 
-.car-show-follow-btn a:visited {
+.car-show-follow-btn a {
     text-decoration: none;
-    color: white;
+    color: inherit;
 }
 
 .car-show-follow-btn:hover {
